--- a/app/src/main/res/layout/a1.xml
+++ b/app/src/main/res/layout/a1.xml
@@ -24,18 +24,27 @@
         android:hint="@string/btn_password"
         android:inputType="textWebEditText|textPersonName|textPassword" />
 
-
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/ok"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="abc"
         android:text="@string/btn_ok" />
 
     <Button
-        android:id="@+id/end"
+    android:id="@+id/end"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/btn_end" />
+
+    <Button
+        android:id="@+id/start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_end" />
+        android:text="@string/btn_start"
+        android:onClick="abc"/>
 
 </LinearLayout>
