完成了在列表中显示汇率

--- a/app/src/main/res/layout/activity_huilv.xml
+++ b/app/src/main/res/layout/activity_huilv.xml
@@ -54,11 +54,19 @@
         android:onClick="btn_won"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_Config"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CONFIG"
+        android:text="Config"
         android:textSize="18sp"
         android:onClick="btn_config"/>
+
+    <Button
+        android:id="@+id/btn_RateList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:text="RateList"
+        android:onClick="btn_rateList"/>
 
 </LinearLayout>
